cmake_minimum_required(VERSION 3.5)

project(Advance_CPP LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(Advance_CPP_1 main.cpp)
add_executable(Advance_CPP_2 week_2.cpp)
add_executable(Advance_CPP_3 exercise_3.cpp)
add_executable(Advance_CPP_4 exercise_4.cpp)
add_executable(Advance_CPP_5 exercise_5.cpp)
add_executable(Advance_CPP_6 exercise_6.cpp)
add_executable(Advance_CPP_7 exercise_7.cpp)
add_executable(Advance_CPP_8 exercise_8.cpp)
add_executable(Advance_CPP_9 exercise_9.cpp)
add_executable(Advance_CPP_10 exercise_10.cpp)
add_executable(Advance_CPP_11 exercise_11.cpp)
add_executable(Advance_CPP_12 exercise_12.cpp)
add_executable(Advance_CPP_13 exercise_13.cpp)
add_executable(Advance_CPP_14 exercise_14.cpp)
add_executable(Advance_CPP_15 exercise_15.cpp)
add_executable(Advance_CPP_16 exercise_16.cpp)
add_executable(Advance_CPP_17 exercise_17.cpp)
add_executable(Advance_CPP_18 exercise_18.cpp)
add_executable(Advance_CPP_19 exercise_19.cpp)
add_executable(Advance_CPP_20 exercise_20.cpp)
add_executable(Advance_CPP_21 exercise_21.cpp)
add_executable(Advance_CPP_22 exercise_22.cpp)
add_executable(Advance_CPP_23 exercise_23.cpp)
add_executable(Advance_CPP_24 exercise_24.cpp)
add_executable(Advance_CPP_25 exercise_25.cpp)
add_executable(Advance_CPP_26 exercise_26.cpp)
add_executable(Advance_CPP_27 exercise_27.cpp)














